--- a/bug_tracking/home/templates/home/login.html
+++ b/bug_tracking/home/templates/home/login.html
@@ -1,6 +1,12 @@
 {% extends 'home/base.html' %} {%load static%} {% block content %}
 <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:600'> -->
 <link rel="stylesheet" href='{%static "css/login.css"%}'>
+
+<style>
+    .home{
+      background-image: url("{% static 'images/darkForest.jpeg' %}");
+    }
+</style>
 <section class="home">
   <!-- partial:index.partial.html -->
   <div class="container_session">
