--- a/bug_tracking/home/static/css/login.css
+++ b/bug_tracking/home/static/css/login.css
@@ -4,6 +4,7 @@
 .clearfix:after{clear:both;display:block}
 a{color:inherit;text-decoration:none}
 
+
 .container_session{
   height: 100%;
   width: 100%;
@@ -15,21 +16,21 @@ a{color:inherit;text-decoration:none}
 .login-wrap{
 	width:100%;
 	margin:auto;
-	max-width:525px;
-	min-height:670px;
-	position:relative;
-	background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+	max-width: 600px;
+	min-height: 670px;
+	height: 50%;
+	position: relative;
+	/* background:url(https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/14528074521939.5c32f5d813a98.jpg) no-repeat center; */
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-  border-radius: 15px;
+	border-radius: 15px;
 }
 .login-html{
-	width:100%;
-	height:100%;
+	width: 600px;
+	height: 670px;
 	position:absolute;
-	padding:90px 70px 50px 70px;
-	background: rgba(105,92,254,.9);
-  border-radius: 15px;
-
+	padding: 70px 70px 50px 70px;
+	background: rgba(56, 50, 124, 0.9);
+	border-radius: 15px;
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -60,10 +61,11 @@ a{color:inherit;text-decoration:none}
 	margin:0 15px 10px 0;
 	display:inline-block;
 	border-bottom:2px solid transparent;
+	color: white;
 }
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
-	color: var(--text-color);
+	color: white;
 	border-color: var(--sidebar-color);
 }
 .login-form{
@@ -71,6 +73,7 @@ a{color:inherit;text-decoration:none}
 	position:relative;
 	perspective:1000px;
 	transform-style:preserve-3d;
+	margin-top: 40px;
 }
 .login-form .group{
 	margin-bottom:15px;
@@ -154,4 +157,5 @@ a{color:inherit;text-decoration:none}
 }
 .foot-lnk{
 	text-align:center;
+	color: white
 }
