--- a/bug_tracking/staticfiles/css/style.css
+++ b/bug_tracking/staticfiles/css/style.css
@@ -343,6 +343,7 @@ body.dark .switch::before {
     font-weight: 500;
     color: var(--text-color);
     padding: 12px 60px;
+    text-shadow: 0px 2px 0 rgba(153, 153, 153, 0.25);
 }
 
 .home .table {
