--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -5,7 +5,7 @@
 <section class="home">
   <div class="parallax">
     <div class="text">Inicio</div>
-    <p>Bienvenido a la plataforma de siguimiento de errores de IS2</p>
+    <p>Bienvenido a la plataforma de seguimiento de errores de IS2</p>
     <a href="#">Registrarme</a>
   </div>
   <div class="info-view">
