--- a/bug_tracking/home/static/css/start.css
+++ b/bug_tracking/home/static/css/start.css
@@ -1,24 +1,26 @@
 
 .parallax {
     text-align: center;
-    color: #707070;
     width: 100%;
     min-height: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80);
+    background-image: url(https://www.xtrafondos.com/wallpapers/montanas-en-el-bosque-lleno-de-nieve-6020.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
 }
 
-
+.parallax .text{
+    color: white;
+}
 .parallax p {
     max-width: 60ch;
     line-height: 1.5;
     padding: 1em;
+    color: white;
 }
 
 .parallax a {
@@ -32,10 +34,6 @@
     font-weight: 700;
     letter-spacing: .5px;
     font-size: .875rem;
-}
-
-.parallax p {
-    color: var(--text-color);
 }
 
 .blank,
@@ -112,6 +110,10 @@
     justify-content: center;
     gap: 1.6em;
 
+}
+
+.second p{
+    color: var(--text-color);
 }
 
 .second .item {
