--- a/bug_tracking/home/templates/registration/login.html
+++ b/bug_tracking/home/templates/registration/login.html
@@ -4,7 +4,8 @@
 
 <style>
     .home{
-      background-image: url("{% static 'images/darkForest.jpeg' %}");
+      background-image: url("{% static 'images/treesSnow.png' %}");
+      background-repeat: no-repeat;
     }
 </style>
 <section class="home">
@@ -18,26 +19,30 @@
         <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Registrarme</label>
         <div class="login-form">
           <div class="sign-in-htm">
-            <div class="group">
-              <label for="user" class="label">Email</label>
-              <input id="user" type="text" class="input">
-            </div>
-            <div class="group">
-              <label for="pass" class="label">Contraseña</label>
-              <input id="pass" type="password" class="input" data-type="password">
-            </div>
+            <form action="" method="post">
+              {% csrf_token %}
+              <div class="group">
+                <label for="username" class="label">Usuario</label>
+                <input id="" name="username" type="text" class="input">
+              </div>
+              <div class="group">
+                <label for="password" class="label">Contraseña</label>
+                <input id="" type="password" name="password" class="input" >
+              </div>
+              
+              <div class="group">
+                <button class="button" type="submit">Iniciar sesión</button>
+              </div>
+              <div class="group">
+                <input id="check" type="checkbox" class="check" checked>
+                <label for="check"><span class="icon"></span> Recordarme</label>
+              </div>
+              <div class="hr"></div>
+              <div class="foot-lnk">
+                <a href="#forgot">¿Olvidaste la contraseña?</a>
+              </div>
+            </form>
             
-            <div class="group">
-              <input type="submit" class="button" value="Iniciar sesión">
-            </div>
-            <div class="group">
-              <input id="check" type="checkbox" class="check" checked>
-              <label for="check"><span class="icon"></span> Recordarme</label>
-            </div>
-            <div class="hr"></div>
-            <div class="foot-lnk">
-              <a href="#forgot">¿Olvidaste la contraseña?</a>
-            </div>
           </div>
           <div class="sign-up-htm">
             <div class="group">
@@ -68,7 +73,14 @@
       </div>
     </div>
   </div>
-
+  <form action="" method="post">
+    {% csrf_token %}
+    <input type="text" name="username" id="">
+    <br>
+    <input type="password" name="password" id="">
+    <br>
+    <button type="submit">Iniciar sesión</button>
+  </form>
 
   <!-- partial -->
 
