--- a/bug_tracking/home/templates/registration/login.html
+++ b/bug_tracking/home/templates/registration/login.html
@@ -43,7 +43,7 @@
             </form>
 
           </div>
-          <div class="sign-up-htm">
+<!--           <div class="sign-up-htm">
             <div class="group">
               <label for="user" class="label">Email</label>
               <input id="user" type="text" class="input">
@@ -67,7 +67,7 @@
             <div class="foot-lnk">
               <label for="tab-1">¿Ya estás registrado?</a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
