--- a/bug_tracking/home/templates/registration/register.html
+++ b/bug_tracking/home/templates/registration/register.html
@@ -23,7 +23,7 @@
 
     <form method="post">
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_p }}
         <button type="submit">Sign Up</button>
       </form>
     
