Arreglado mandar reportes

--- a/bug_tracking/bug_report/static/css/report.css
+++ b/bug_tracking/bug_report/static/css/report.css
@@ -221,7 +221,7 @@ text-align: center;
       display: none;
   }
 
-  .input label[for="id_correo_usuario"] {
+  .input label[for="id_email"] {
       display: none;
   }
 
