--- a/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
+++ b/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
@@ -28,10 +28,10 @@
           {{ form_bug.as_p }}
           <label class="input-label">Descripción del problema</label>
         </div>
-        <div class="input" id="userEmail">
+        <!-- <div class="input" id="userEmail">
           {{ form_usuario.as_p }}
           <label class="input-label">Email</label>
-        </div>
+        </div> -->
         <div class="input" id="project">
           {{ form_proyecto.as_p }}
           <label class="input-label">Proyecto ascociado</label>
