Registro estilizado y funcional

--- a/bug_tracking/home/templates/home/base.html
+++ b/bug_tracking/home/templates/home/base.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="bottom-content">
-                <li class="">
+                <li class="login-button">
                     {%if request.user.is_authenticated%}
                         <a href="{% url 'home:exit' %}">
                             <i class='bx bx-log-out icon' ></i>
