--- a/bug_tracking/home/templates/registration/register.html
+++ b/bug_tracking/home/templates/registration/register.html
@@ -1,32 +1,59 @@
-{% extends "home/base.html" %} {%load static%} 
+{% extends "home/base.html" %} {%load static%}
 
-{% block title %}Sign Up{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href='{%static "css/register.css"%}'>
 <style>
-    .home {
-      background-image: url("{% static 'images/treesSnow.png' %}");
-      background-repeat: no-repeat;
-    }
+  .home {
+    background-image: url("{% static 'images/treesSnow.png' %}");
+    background-repeat: no-repeat;
+  }
 </style>
 <section class="home">
+  <div class="container_session">
     <div class="text">Gestión de sesión</div>
-    <div class="container-signup">
-        <div class="form-signup">
-            
-        </div>
-        <div class="requeriments-signup">
+    <div class="login-wrap">
+      <div class="login-html">
+        <input id="tab-1" type="radio" name="tab" class="sign-in"><label for="tab-1" class="tab"><a href="{% url 'home:login' %}">Iniciar sesión</a> </label>
+        <input id="tab-2" type="radio" name="tab" class="sign-up" checked><label for="tab-2" class="tab">Registrarme</label>
+        <div class="login-form">
+          <div class="sign-in-htm">
 
+          </div>
+          <div class="sign-up-htm">
+            <form action="" method="post">
+              {% csrf_token %}
+              <div class="group">
+                <label for="user" class="label">Usuario</label>
+                <input name="username" id="user" type="text" class="input">
+              </div>
+              <div class="group">
+                <label for="pass" class="label">Contraseña</label>
+                <input id="pass" name="password1" type="password" class="input" data-type="password">
+              </div>
+              <div class="group">
+                <label for="pass" class="label">Repite la contraseña</label>
+                <input id="pass" name="password2" type="password" class="input" data-type="password">
+              </div>
+              <div class="group">
+                <label for="pass" class="label">Email</label>
+                <input id="pass" name="email" type="text" class="input">
+              </div>
+              <div class="group">
+                <button class="button" type="submit">Registrarme</button>
+                <!-- <input type="submit" class="button" value="Registrarme"> -->
+              </div>
+              <div class="hr"></div>
+              <div class="foot-lnk">
+                <label for="tab-1"><a href="{% url 'home:login' %}">¿Ya estás registrado?</a> </a>
+              </div>
+            </form>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Sign Up</button>
-      </form>
-    
 </section>
-  
+
 {% endblock %}
