--- a/bug_tracking/home/static/css/login.css
+++ b/bug_tracking/home/static/css/login.css
@@ -151,3 +151,7 @@ a{color:inherit;text-decoration:none}
 	text-align:center;
     color: white;
 }
+
+.sidebar li.login-button{
+	display: none;
+}
