--- a/bug_tracking/home/templates/registration/login.html
+++ b/bug_tracking/home/templates/registration/login.html
@@ -15,7 +15,7 @@
       <div class="login-html">
         <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Iniciar
           sesión</label>
-        <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Registrarme</label>
+        <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab"> <a href="{% url 'home:signup' %}">Registrarme</a> </label>
         <div class="login-form">
           <div class="sign-in-htm">
             <form action="" method="post">
