Arreglo detalle bug

--- a/bug_tracking/bug_detail/templates/bug_detail/index.html
+++ b/bug_tracking/bug_detail/templates/bug_detail/index.html
@@ -75,7 +75,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>{{ programador.nombre_programador }}</td>
+                        <td>{{ programador.username }}</td>
                     </tr>
                 </tbody>
             </table>
