Modificación de registro y reporte

--- a/bug_tracking/home/static/css/login.css
+++ b/bug_tracking/home/static/css/login.css
@@ -152,6 +152,6 @@ a{color:inherit;text-decoration:none}
     color: white;
 }
 
-.sidebar li.login-button{
+.bottom-content li.login-button{
 	display: none;
 }
