--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -19,7 +19,7 @@
   <div class="parallax">
     <div class="text">Inicio</div>
     <p>Bienvenido a la plataforma de seguimiento de errores de IS2</p>
-    <a href="#">Registrarme</a>
+    <a href="signup">Registrarme</a>
   </div>
   <div class="info-view">
       <div class="box">
