cambio en el orden de los  tickets y reportes (del ultimo al primero)

--- a/bug_tracking/bug_detail/templates/bug_detail/index.html
+++ b/bug_tracking/bug_detail/templates/bug_detail/index.html
@@ -19,7 +19,7 @@
         </span>
         <span class="text-2">
           {% if avance %}
-          Actualizado {{ avance.last.fecha_avance | naturaltime }}
+          Actualizado {{ avance.first.fecha_avance | naturaltime }}
           {% else %}
           Sin cambios
           {% endif %}
