--- a/bug_tracking/buglist/templates/buglist/buglist.html
+++ b/bug_tracking/buglist/templates/buglist/buglist.html
@@ -27,23 +27,23 @@
           </thead>
           <tbody>
             {% if bug_list %}
-            <tr>
-              {% for Bug in bug_list %}
+            {% for Bug in bug_list %}
+            <tr onclick="window.location.href = '{% url 'detail:index' Bug.id_bug %}';">
               <td>
-                <a href="{% url 'detail:index' Bug.id_bug %}"> {{ Bug.id_bug }} </a>
+                {{ Bug.id_bug }}
                 <img src={%static "images/logo.png"%}>
               </td>
               <td>
-                <p>{{ Bug.descripcion }}</p>
+                <p>{{ Bug.titulo | truncatechars:90 }}</p>
               </td>
               <td>{{ Bug.fecha_reporte | naturaltime}}</td>
-              {%if Bug.estado == "en proceso"%}
+              {%if Bug.estado == "ASIGNADO"%}
                 <td><span class="status process">{{ Bug.estado }}</span></td>
               {%endif%}
-              {%if Bug.estado == "solucionado"%}
+              {%if Bug.estado == "SOLUCIONADO"%}
                 <td><span class="status completed">{{ Bug.estado }}</span></td>
               {%endif%}
-              {%if Bug.estado == "nuevo"%}
+              {%if Bug.estado == "EN PROCESO"%}
                 <td><span class="status pending">{{ Bug.estado }}</span></td>
               {%endif%}
               <td>{{ Bug.id_proyecto }}</td>
@@ -87,14 +87,14 @@
           <tbody>
             {% if report_list %}
             <tr>
-              {% for ReporteBug in report_list %}
+              {% for ReporteBug, Proyecto in report_list %}
               <td>
                 <p>{{ ReporteBug.id_reporte }}</p>
                 <img src={%static "images/logo.png"%}>
               </td>
-              <td>{{ ReporteBug.reporte }}</td>
+              <td>{{ ReporteBug.titulo | truncatechars:90 }}</td>
               <td>{{ ReporteBug.fecha_reporte }}</td>
-              <td>{{ Bug.id_proyecto }}</td>
+              <td>{{ Proyecto.nombre_proyecto }}</td>
             </tr>
               {%endfor%}
             {%else%}
