--- a/bug_tracking/home/static/css/start.css
+++ b/bug_tracking/home/static/css/start.css
@@ -1,4 +1,19 @@
 
+:root{
+    --light: #F9F9F9;
+	--blue: #3C91E6;
+	--light-blue: #CFE8FF;
+	--grey: #eee;
+	--dark-grey: #AAAAAA;
+	--dark: #342E37;
+	--red: #DB504A;
+	--yellow: #FFCE26;
+	--light-yellow: #FFF2C6;
+	--orange: #FD7238;
+	--light-orange: #FFE0D3;
+
+}
+
 .parallax {
     text-align: center;
     width: 100%;
@@ -175,4 +190,47 @@
 
 .img-third {
     background-image: url(https://preview.redd.it/newspaper-pixilart-is-the-software-i-use-and-an-online-v0-t3ccxihfxiia1.png?width=1080&crop=smart&auto=webp&v=enabled&s=d297b9d74d3e3601ef4817d84d61990de85f4f7f);
+}
+
+.box-info {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+	grid-gap: 24px;
+	/* margin-top: 36px; */
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+.box-info li {
+	padding: 24px;
+	background: var(--sidebar-color);
+	border-radius: 15px;
+	display: flex;
+	align-items: center;
+	grid-gap: 24px;
+}
+
+.box-info li .bx {
+	width: 80px;
+	height: 80px;
+	border-radius: 10px;
+	font-size: 36px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.box-info li:nth-child(1) .bx {
+	background: var(--light-blue);
+	color: var(--blue);
+}
+
+.box-info li:nth-child(2) .bx {
+	background: var(--light-yellow);
+	color: var(--yellow);
+}
+
+.box-info li:nth-child(3) .bx {
+	background: var(--light-orange);
+	color: var(--orange);
 }
