--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -6,7 +6,29 @@
   {%if request.user.is_authenticated%}
   <div class="text">Bienvenido {{request.user.username | title}}</div>
 
-
+  <ul class="box-info">
+    <li>
+      <i class='bx bxs-calendar-check'></i>
+      <span class="text">
+        <h3>1020</h3>
+        <p>New Order</p>
+      </span>
+    </li>
+    <li>
+      <i class='bx bxs-group'></i>
+      <span class="text">
+        <h3>2834</h3>
+        <p>Visitors</p>
+      </span>
+    </li>
+    <li>
+      <i class='bx bxs-dollar-circle'></i>
+      <span class="text">
+        <h3>$2543</h3>
+        <p>Total Sales</p>
+      </span>
+    </li>
+  </ul>
 
 
 
@@ -22,106 +44,106 @@
     <a href="signup">Registrarme</a>
   </div>
   <div class="info-view">
-      <div class="box">
-        <h2>Últimos reportes</h2>
-        {% if listar_reportes %}
-        <table class="table"> 
-            <thead>
-                <tr>
-                  <th>ID</th>
-                  <th>Título</th>
-                  <th>Fecha</th>
-                </tr>
-            </thead>
-            <tbody>
-              {% for ReporteBug in listar_reportes %}
-              <tr>
-                <td>{{ ReporteBug.id_reporte }}</td>
-                <td>{{ ReporteBug.reporte }}</td>
-                <td>{{ ReporteBug.fecha_reporte }}</td>
-              </tr>
-              {%endfor%}
-            </tbody>
-        </table>
-        {% else %}
-        <table class="table"> 
-          <thead>
-              <tr>
-                <th>ID</th>
-                <th>Descripción</th>
-                <th>Prioridad</th>
-                <th>Estado</th>
-                <th>Proyecto</th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-                <td colspan="4" style="text-align: center">No hay errores disponibles</td>
-              </tr>
-            </tbody>
+    <div class="box">
+      <h2>Últimos reportes</h2>
+      {% if listar_reportes %}
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Título</th>
+            <th>Fecha</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for ReporteBug in listar_reportes %}
+          <tr>
+            <td>{{ ReporteBug.id_reporte }}</td>
+            <td>{{ ReporteBug.reporte }}</td>
+            <td>{{ ReporteBug.fecha_reporte }}</td>
+          </tr>
+          {%endfor%}
+        </tbody>
+      </table>
+      {% else %}
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Descripción</th>
+            <th>Prioridad</th>
+            <th>Estado</th>
+            <th>Proyecto</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="4" style="text-align: center">No hay errores disponibles</td>
+          </tr>
+        </tbody>
       </table>
       {% endif %}
+    </div>
+
+
+
+
+
+
+    <div class="box">
+      <div class="text-info">
+        <h3>Hemos resuelto más de {{total_bug}} errores</h3>
       </div>
+    </div>
 
-
-
-
-
-
-      <div class="box">
-        <div class="text-info">
-          <h3>Hemos resuelto más de {{total_bug}} errores</h3>
-        </div>
+    <div class="box">
+      <div class="text-info">
+        <h3>Hemos recibido más de {{total_report}} reportes</h3>
       </div>
-      
-      <div class="box">
-        <div class="text-info">
-          <h3>Hemos recibido más de {{total_report}} reportes</h3>
-        </div>
-      </div>
-      <div class="box">
-        <h2>Últimos errores</h2>
-        {% if listar_bug %}
-        <table class="table"> 
-            <thead>
-                <tr>
-                  <th>ID</th>
-                  <th>Título</th>
-                  <th>Descripción</th>
-                  <th>Fecha</th>
-                  <th>Proyecto</th>
-                </tr>
-            </thead>
-            <tbody>
-              {% for Bug in  listar_bug%}
-              <tr>
-                  <td>{{ Bug.id_bug }}</td>
-                  <td>{{ Bug.titulo }}</td>
-                  <td>{{ Bug.descripcion }}</td>
-                  <td>{{ Bug.fecha_reporte }}</td>
-              </tr>
-              {%endfor%}
-              </tbody>
-        </table>
-        {% else %}
-        <table class="table"> 
-          <thead>
-              <tr>
-                <th>ID</th>
-                <th>Descripción</th>
-                <th>Prioridad</th>
-                <th>Estado</th>
-                <th>Proyecto</th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-                <td colspan="4" style="text-align: center">No hay reportes disponibles</td>
-              </tr>
-            </tbody>
+    </div>
+    <div class="box">
+      <h2>Últimos errores</h2>
+      {% if listar_bug %}
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Título</th>
+            <th>Descripción</th>
+            <th>Fecha</th>
+            <th>Proyecto</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for Bug in  listar_bug%}
+          <tr>
+            <td>{{ Bug.id_bug }}</td>
+            <td>{{ Bug.titulo }}</td>
+            <td>{{ Bug.descripcion }}</td>
+            <td>{{ Bug.fecha_reporte }}</td>
+          </tr>
+          {%endfor%}
+        </tbody>
+      </table>
+      {% else %}
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Descripción</th>
+            <th>Prioridad</th>
+            <th>Estado</th>
+            <th>Proyecto</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="4" style="text-align: center">No hay reportes disponibles</td>
+          </tr>
+        </tbody>
       </table>
       {% endif %}
-      </div>
+    </div>
   </div>
   <div class="parallax second">
     <div class="item">
@@ -152,6 +174,6 @@
     </div>
   </div>
   {%endif%}
-  
+
 </section>
 {% endblock %}
