--- a/bug_tracking/home/static/css/start.css
+++ b/bug_tracking/home/static/css/start.css
@@ -11,6 +11,8 @@
 	--light-yellow: #FFF2C6;
 	--orange: #FD7238;
 	--light-orange: #FFE0D3;
+    --green: #006400;
+    --light-green: #B3E6B5;
 
 }
 
@@ -192,17 +194,26 @@
     background-image: url(https://preview.redd.it/newspaper-pixilart-is-the-software-i-use-and-an-online-v0-t3ccxihfxiia1.png?width=1080&crop=smart&auto=webp&v=enabled&s=d297b9d74d3e3601ef4817d84d61990de85f4f7f);
 }
 
+
+
+
+/* VISTA DE USUARIO REGISTRADO */
+
 .box-info {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 	grid-gap: 24px;
-	/* margin-top: 36px; */
-	margin-left: 20px;
-	margin-right: 20px;
+	margin-top: 20px;
+	margin-left: 5%;
+	/* width: 90%; */
+	margin-right: 5%;
+	/* justify-content: center; */
 }
 
 .box-info li {
-	padding: 24px;
+	/* padding: 20px; */
+	/* padding-right: 24px; */
+	/* padding-left: 24px; */
 	background: var(--sidebar-color);
 	border-radius: 15px;
 	display: flex;
@@ -211,8 +222,8 @@
 }
 
 .box-info li .bx {
-	width: 80px;
-	height: 80px;
+	width: 140px;
+	height: 120px;
 	border-radius: 10px;
 	font-size: 36px;
 	display: flex;
@@ -220,9 +231,12 @@
 	align-items: center;
 }
 
+.box-info .text{
+    font-size: 20px;
+}
 .box-info li:nth-child(1) .bx {
-	background: var(--light-blue);
-	color: var(--blue);
+	background: var(--light-green);
+	color: var(--green);
 }
 
 .box-info li:nth-child(2) .bx {
