--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -10,25 +10,109 @@
     <li>
       <i class='bx bxs-calendar-check'></i>
       <span class="text">
-        <h3>1020</h3>
-        <p>New Order</p>
+        <h3>{{reportes_solucionados}}</h3>
+        <p>de tus errores se han resuelto</p>
       </span>
     </li>
     <li>
       <i class='bx bxs-group'></i>
       <span class="text">
-        <h3>2834</h3>
-        <p>Visitors</p>
+        <h3>{{reportes_asignados}}</h3>
+        <p>de tus errores están asignados</p>
       </span>
     </li>
     <li>
       <i class='bx bxs-dollar-circle'></i>
       <span class="text">
-        <h3>$2543</h3>
-        <p>Total Sales</p>
+        <h3>{{reportes_enproceso}}</h3>
+        <p>de tus errores se están viendo</p>
       </span>
     </li>
   </ul>
+  <div class="container-table">
+    <div class="table-data" style="margin-bottom: 2em;">
+      <div class="order">
+        <div class="head">
+          <h3>Bandeja de notificaciones</h3>
+          
+          <!-- <a href="www.google.cl"><i class='bx bx-search'></i></a>
+          <i class='bx bx-filter'></i> -->
+        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>N°</th>
+              <th>Mensaje</th>
+            </tr>
+          </thead>
+          <tbody>
+            
+            <tr>
+              <td>
+                <p>0</p>
+              </td>
+              <td>
+                <p>No hay notificaciones</p>
+              </td>
+            
+            </tr>
+
+            <!-- <tr>
+              <td>No hay errores disponibles</p>
+            </tr> -->
+            
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <div class="container-table">
+    <div class="table-data" style="margin-bottom: 2em;">
+      <div class="order">
+        <div class="head">
+          <h3>Tus reportes enviados</h3>
+          
+          <a href="www.google.cl"><i class='bx bx-search'></i></a>
+          <i class='bx bx-filter'></i>
+        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Título</th>
+              <th>Fecha</th>
+              <th>Proyecto</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% if reportes_usuario %}
+            <tr>
+              {% for ReporteBug in reportes_usuario %}
+              <td>
+                <p>{{ ReporteBug.id_reporte }}</p>
+                <img src={%static "images/logo.png"%}>
+              </td>
+              <td>{{ ReporteBug.titulo | truncatechars:90 }}</td>
+              <td>{{ ReporteBug.fecha_reporte }}</td>
+              <td>{{ ReporteBug.id_proyecto.nombre_proyecto }}</td>
+            </tr>
+              {%endfor%}
+            {%else%}
+            <tr>
+              <td>No hay errores disponibles</p>
+            </tr>
+            {%endif%}
+            
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <p>{{reportes_solucionados}}</p>
+  <p>{{reportes_asignados}}</p>
+  <p>{{reportes_enproceso}}</p>
+
 
 
 
