--- a/bug_tracking/home/static/css/start.css
+++ b/bug_tracking/home/static/css/start.css
@@ -205,6 +205,7 @@
 	grid-gap: 24px;
 	margin-top: 20px;
 	margin-left: 5%;
+    margin-bottom: 2rem;
 	/* width: 90%; */
 	margin-right: 5%;
 	/* justify-content: center; */
