--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -113,7 +113,13 @@
   <p>{{reportes_asignados}}</p>
   <p>{{reportes_enproceso}}</p>
 
-
+  <footer>
+    <div class="text" style="text-align: center;">
+      {%if request.user.is_authenticated%}
+      Hemos detectado que eres administrador, te recomendamos utilizar el panel de administración
+      {%endif%}
+    </div>
+  </footer>
 
 
 
