--- a/bug_tracking/home/templates/home/base.html
+++ b/bug_tracking/home/templates/home/base.html
@@ -93,6 +93,14 @@
             </div>
 
             <div class="bottom-content">
+                {% if user.is_superuser %}
+                    <li class="nav-link">
+                        <a href="{% url 'admin:index' %}">
+                            <i class='bx bx-cog icon' ></i>
+                            <span class="text nav-text">Administrar</span>
+                        </a>
+                    </li>
+                {% endif %}
                 <li class="login-button">
                     {%if request.user.is_authenticated%}
                         <a href="{% url 'home:exit' %}">
