Arreglo para mostrar tickets y normalizar fecha de reportes

--- a/bug_tracking/bug_detail/templates/bug_detail/index.html
+++ b/bug_tracking/bug_detail/templates/bug_detail/index.html
@@ -127,7 +127,7 @@
   <h3 class="text-2 titulo">Tickets</h3>
   
   <div class="modulo">
-    {% if reporte %}
+    {% if Reporte in reporte %}
       {% for Reporte,Usuario  in reporte %}
         <div class="reporte container">
           <div class="id-fecha">
