--- a/bug_tracking/buglist/templates/buglist/buglist.html
+++ b/bug_tracking/buglist/templates/buglist/buglist.html
@@ -37,14 +37,14 @@
                 <p>{{ Bug.titulo | truncatechars:90 }}</p>
               </td>
               <td>{{ Bug.fecha_reporte | naturaltime}}</td>
-              {%if Bug.estado == "ASIGNADO"%}
-                <td><span class="status process">{{ Bug.estado }}</span></td>
+              {%if Bug.estado == "('ASIGNADO', 'bug recien asignado')"%}
+                <td><span class="status process">Asignado</span></td>
               {%endif%}
-              {%if Bug.estado == "SOLUCIONADO"%}
-                <td><span class="status completed">{{ Bug.estado }}</span></td>
+              {%if Bug.estado == "('SOLUCIONADO', 'bug solucionado')"%}
+                <td><span class="status completed">Solucionado</span></td>
               {%endif%}
-              {%if Bug.estado == "EN PROCESO"%}
-                <td><span class="status pending">{{ Bug.estado }}</span></td>
+              {%if Bug.estado == "('EN PROCESO', 'bug esta proceso de revisión')"%}
+                <td><span class="status pending">En proceso</span></td>
               {%endif%}
               <td>{{ Bug.id_proyecto }}</td>
             </tr>
