Se creo la paginacion en buglist con su estilizacion

--- a/bug_tracking/buglist/static/css/buglist.css
+++ b/bug_tracking/buglist/static/css/buglist.css
@@ -31,6 +31,95 @@
     flex-direction: row;
     justify-content: space-around;
 }
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
 
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.pagination a {
+  color: var(--text-color);
+  display: inline-block;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 1px solid var(--text-color);
+  border-radius: 5px;
+  margin: 0 1px;
+}
 
+.pagination a.active {
+  background-color: var(--sidebar-color);
+  color: var(--sidebar-color);
+  border-radius: 5px;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: var(--body-color);
+}
+
+.pagination a:hover:not(.active) span {
+  color: var(--sidebar-color);
+}
+
+.pagination a:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.pagination a:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.pagination .current-page {
+  display: inline-block;
+  padding: 8px 16px;
+  border: 1px solid var(--text-color);
+  border-radius: 5px;
+  background-color: var(--body-color);
+  color: var(--text-color);
+  margin: 0 1px;
+}
+
+.pagination .ellipsis {
+  display: inline-block;
+  padding: 8px 16px;
+  border: 1px solid var(--text-color);
+  border-radius: 5px;
+  color: var(--text-color);
+  margin: 0 1px;
+}
+
+.pagination .current-page a {
+  margin: 0 -1px;
+}
+
+.pagination-row:hover {
+  background-color: initial;
+  cursor: auto;
+}
+
+.pagination-row:hover td,
+.pagination-row:hover a {
+  background-color: transparent;
+  color: inherit;
+}
+
+.pagination-row .pagination-container:hover .pagination {
+  background-color: transparent;
+}
+
+.pagination-row .pagination-container:hover .pagination a {
+  background-color: transparent;
+  color: var(--text-color);
+}
+
+.pagination-row .pagination-container:hover .pagination a:hover:not(.active) {
+  background-color: var(--body-color);
+}
